# Pre-Deploy-Guardian

./: .gitignore  README.md  pyproject.toml
examples/sample_app/: app.py
guardian/cli/: commands.py  main.py
guardian/data/: deploy_history.json  history_reader.py
guardian/engine/: decision_engine.py  deploy_executor.py  repo_analyzer.py  test_executor.py
guardian/rules/: context.py
guardian/utils/: audit_logger.py
